[tool.poetry]
name = "tda-brain-data"
version = "0.1.0"
description = "Using Topological Data Analysis for analyzing brain data"
authors = ["Pia Baronetzky"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8"
giotto-tda = "^0.6"
gudhi = "^3.8"
h5py = "^3.9"
hausdorff = "^0.2"
joblib = "^1.3"
matplotlib = "^3.7"
numpy = "^1.25"
pandas = "^2.1"
plotly = "^5.16"
pyedflib = "^0.1"
scipy = "^1.11"
seaborn = "^0.13"
scikit-image = "^0.22"
scikit-learn = "^1.0"
umap-learn = "^0.5"
statsmodels = "^0.14"
mlflow = "^2.11"
napari = "^0.4"
pytest = "^8.0"
xgboost = "^2.0"
import-ipynb = "^0.1"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
